--- a/car-main/index.html
+++ b/car-main/index.html
@@ -19,7 +19,7 @@
 <header class="header">
     <div id="menu-btn" class="fas fa-bars"></div>
 
-    <a href="#" class="logo"> <span>Automa</span>one </a>
+    <a href="#" class="logo"> <span>Automa</span>Zone </a>
 
     <nav class="navbar">
         <a href="#home">home</a>
@@ -718,7 +718,7 @@
 
     </div>
 
-    <div class="credit"> &#169; 2024 Your MaxWheels. All rights reserved. </div>
+    <div class="credit"> &#169; 2024 Your AutomaZone. All rights reserved. </div>
 
 </section>
 
